[gd_scene load_steps=29 format=3 uid="uid://bph8tiavxldp8"]

[ext_resource type="Script" uid="uid://b4r10776830j1" path="res://Enemies/Normal Enemy/enemy.gd" id="1_s7bn3"]
[ext_resource type="Texture2D" uid="uid://cvh378ls0rq3p" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier-Attack01.png" id="2_e6d4v"]
[ext_resource type="Texture2D" uid="uid://cgxu5u1t3idmc" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier-Idle.png" id="2_s7bn3"]
[ext_resource type="Texture2D" uid="uid://d177derkpf8lv" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier-Walk.png" id="4_qp131"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7bn3"]
size = Vector2(58, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_52xpa"]
atlas = ExtResource("2_e6d4v")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdgko"]
atlas = ExtResource("2_e6d4v")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4qr3"]
atlas = ExtResource("2_e6d4v")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_73x2u"]
atlas = ExtResource("2_e6d4v")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iwxp"]
atlas = ExtResource("2_e6d4v")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v6dm"]
atlas = ExtResource("2_e6d4v")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hac7"]
atlas = ExtResource("2_s7bn3")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6d4v"]
atlas = ExtResource("2_s7bn3")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp131"]
atlas = ExtResource("2_s7bn3")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6do27"]
atlas = ExtResource("2_s7bn3")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvmyp"]
atlas = ExtResource("2_s7bn3")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nxwx"]
atlas = ExtResource("2_s7bn3")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r3mv"]
atlas = ExtResource("4_qp131")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jccr3"]
atlas = ExtResource("4_qp131")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd3y4"]
atlas = ExtResource("4_qp131")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6feu"]
atlas = ExtResource("4_qp131")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_npdxj"]
atlas = ExtResource("4_qp131")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxvgb"]
atlas = ExtResource("4_qp131")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qy3v"]
atlas = ExtResource("4_qp131")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_smfg5"]
atlas = ExtResource("4_qp131")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_52xpa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_52xpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdgko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4qr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73x2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iwxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v6dm")
}],
"loop": true,
"name": &"Attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hac7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6d4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp131")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6do27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvmyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nxwx")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r3mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jccr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd3y4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6feu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npdxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxvgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qy3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smfg5")
}],
"loop": true,
"name": &"Walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6d4v"]
size = Vector2(1593, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qp131"]
size = Vector2(41, 63)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_s7bn3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -3.5)
shape = SubResource("RectangleShape2D_s7bn3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.00001, 5)
scale = Vector2(3.16, 3.22)
sprite_frames = SubResource("SpriteFrames_52xpa")
animation = &"Idle"
frame_progress = 0.633041

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
light_mask = 0
position = Vector2(-5.5, -5)
shape = SubResource("RectangleShape2D_e6d4v")

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(47, -4)
collision_layer = 16
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_qp131")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
